# Magnetic_Tactile_Sensor

./: README.md  calibration.py  pyproject.toml  tactile_force_predict.py  train.py  visual_2d.py
Arduino/sensor/: sensor.ino
Arduino/sensor_mux/: sensor_mux.ino
circuits/: BOM_Tactile_PCB1.xlsx  PickAndPlace_PCB1.xlsx
model/: model.pth  scaler.pkl
parts/: bottom23.STL  finger_tip_v3.STEP  mid.STL  top23.STL
